[gd_scene load_steps=19 format=3 uid="uid://b1qitrqlcp4p"]

[ext_resource type="Script" path="res://scripts/electric_arc.gd" id="1_w0i67"]
[ext_resource type="Texture2D" uid="uid://b48fv6bqxqlps" path="res://assets/sprites/fx/spr_electric_arc.png" id="2_umtgm"]
[ext_resource type="Script" path="res://scripts/static_body_hitbox.gd" id="3_ajj2r"]
[ext_resource type="AudioStream" uid="uid://dch38lv7y4owm" path="res://assets/sfx/snd_electric_arc.wav" id="4_r1u38"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oeq30"]
atlas = ExtResource("2_umtgm")
region = Rect2(0, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckloq"]
atlas = ExtResource("2_umtgm")
region = Rect2(8, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vc14"]
atlas = ExtResource("2_umtgm")
region = Rect2(16, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q32lh"]
atlas = ExtResource("2_umtgm")
region = Rect2(24, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rb20"]
atlas = ExtResource("2_umtgm")
region = Rect2(32, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjrnw"]
atlas = ExtResource("2_umtgm")
region = Rect2(40, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_76s4v"]
atlas = ExtResource("2_umtgm")
region = Rect2(48, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_47f0c"]
atlas = ExtResource("2_umtgm")
region = Rect2(56, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_125ci"]
atlas = ExtResource("2_umtgm")
region = Rect2(64, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_82k82"]
atlas = ExtResource("2_umtgm")
region = Rect2(72, 0, 8, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wukhc"]
atlas = ExtResource("2_umtgm")
region = Rect2(80, 0, 8, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_4bec0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeq30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckloq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vc14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q32lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rb20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjrnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76s4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47f0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_125ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82k82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wukhc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhxad"]
size = Vector2(6, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ahvi"]
size = Vector2(8, 40)

[node name="ElectricArcNoHitbox" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_w0i67")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_4bec0")
autoplay = "default"
frame_progress = 0.359695

[node name="WallCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jhxad")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_ajj2r")

[node name="Hitbox" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_7ahvi")

[node name="ElectricSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_r1u38")
bus = &"SFX"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
